Seamless Travel and Lobby

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -98,6 +98,8 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/GameStartup")
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
++MapsToCook=(FilePath="/Game/Maps/BlasterMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
