--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/GameStartup.GameStartup
-EditorStartupMap=/Game/Maps/Lobby.Lobby
+EditorStartupMap=/Game/Maps/BlasterMap.BlasterMap
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
